# ChatPDF

./: .env.example  .gitignore  README.md  docker-compose.yml  ingestor.py  pyproject.toml  query.py  sonar-project.properties
.github/workflows/: sast.yml
app/: config.py  main.py  rag.py  schemas.py
app/static/: app.js  style.css
app/templates/: index.html
