[project]
name = "week-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "jinja2>=3.1.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-postgres>=0.0.17",
    "langchain[openai]>=1.2.15",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pypdf>=6.9.2",
    "uvicorn[standard]>=0.38.0",
]
